objects/SFDC_Test_Case__c.object
<CustomObject>
    <description>Test Cases outline specific prerequisites for certain testing scenarios, and their expected results.</description>
    <fields>
        <fullName>Bug__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Bug</label>
        <referenceTo>SFDC_Bug__c</referenceTo>
        <relationshipName>R00N46000003QckdEAC</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Component__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Component</label>
        <referenceTo>SFDC_Component__c</referenceTo>
        <relationshipName>R00N46000003QcjVEAS</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Expected_Results__c</fullName>
        <label>Expected Results</label>
        <length>32000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Planned_Staff_Time__c</fullName>
        <label>Staff Time(Hours)</label>
        <precision>11</precision>
        <scale>1</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Prerequisites_and_Initial_Conditions__c</fullName>
        <label>Prerequisites and Initial Conditions</label>
        <length>32000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Status__c</fullName>
        <label>Status</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Not Tested</fullName>
                    <default>true</default>
                    <label>Not Tested</label>
                </value>
                <value>
                    <fullName>Not Covered</fullName>
                </value>
                <value>
                    <fullName>N/A</fullName>
                </value>
                <value>
                    <fullName>No Run</fullName>
                </value>
                <value>
                    <fullName>Failed</fullName>
                </value>
                <value>
                    <fullName>Passed</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Test_Description_and_Steps__c</fullName>
        <label>Test Description and Steps</label>
        <length>32000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Test_Phase__c</fullName>
        <label>Test Phase</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Component</fullName>
                </value>
                <value>
                    <fullName>Use Case</fullName>
                </value>
                <value>
                    <fullName>Unit</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Test_Type__c</fullName>
        <label>Test Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Functionality</fullName>
                </value>
                <value>
                    <fullName>Integration</fullName>
                </value>
                <value>
                    <fullName>System</fullName>
                </value>
                <value>
                    <fullName>Compatability</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Title__c</fullName>
        <label>Title</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <label>Test Case</label>
    <nameField>
        <displayFormat>TC-{0000}</displayFormat>
        <label>Test Case #</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Test Cases</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>